@startuml

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam ArrowColor #444444
skinparam ClassBorderColor #555555
skinparam linetype ortho

' ══════════════════════════════
'  ENUMS
' ══════════════════════════════

enum Role {
  ADMIN
  VISITOR
}

' ══════════════════════════════
'  DOMAIN LAYER
' ══════════════════════════════

class User {
  - id: String
  - name: String
  - email: String
  - phoneNumber: String
  - username: String
  - role: Role
  - loggedIn: boolean
  --
  + markLoggedIn(): void
  + logout(): void
  + isLoggedIn(): boolean
  + getId(): String
  + getName(): String
  + getEmail(): String
  + getPhoneNumber(): String
  + getUsername(): String
  + getRole(): Role
}

class Admin {
  - appointmentDAO: AppointmentDAO
  - timeSlotDAO: TimeSlotDAO
  - scheduleDAO: ScheduleDAO
  --
  - Admin(builder: Builder)
  + viewWorkDays(): List<Schedule>
  + addWorkDay(workDate: LocalDate): long
  + viewAvailableSlots(): List<TimeSlot>
  + viewAvailableSlotsByDay(scheduleId: long): List<TimeSlot>
  + addSlot(scheduleId: long, start: OffsetDateTime, end: OffsetDateTime): long
  + setSlotAvailability(slotId: long, available: boolean): boolean
  + cancelAppointmentWithNote(appointmentId: long, note: String, tsDAO: TimeSlotDAO): boolean
  + modifyAppointmentWithNote(appointmentId: long, newCount: int, note: String): boolean
  + validateDuration(a: Appointment): boolean
  + validateCapacity(a: Appointment): boolean
  + validateType(a: Appointment): boolean
}

class "Admin.Builder" as AdminBuilder {
  - id: String
  - name: String
  - email: String
  - phoneNumber: String
  - username: String
  - appointmentDAO: AppointmentDAO
  - timeSlotDAO: TimeSlotDAO
  - scheduleDAO: ScheduleDAO
  --
  + setId(id: String): Builder
  + setName(name: String): Builder
  + setEmail(email: String): Builder
  + setPhoneNumber(phoneNumber: String): Builder
  + setUsername(username: String): Builder
  + setAppointmentDAO(d: AppointmentDAO): Builder
  + setTimeSlotDAO(d: TimeSlotDAO): Builder
  + setScheduleDAO(d: ScheduleDAO): Builder
  + build(): Admin
}

class Appointment {
  - id: long
  - type: String
  - status: String
  - startTime: OffsetDateTime
  - endTime: OffsetDateTime
  - participantsCount: int
  - maxParticipants: int
  - createdBy: long
  - slotId: Long
  - adminNote: String
  - canceledByAdmin: boolean
  - createdAt: OffsetDateTime
  - updatedAt: OffsetDateTime
  --
  + {static} TYPE_FIRST_VISIT: String
  + {static} TYPE_FOLLOW_UP: String
  + {static} TYPE_VIRTUAL: String
  + {static} TYPE_GROUP_FIRST_VISIT: String
  + {static} TYPE_GROUP_FOLLOW_UP: String
  + {static} TYPE_GROUP_VIRTUAL: String
  + {static} STATUS_PENDING: String
  + {static} STATUS_CONFIRMED: String
  + {static} STATUS_CANCELED: String
  + {static} STATUS_DONE: String
  --
  + isGroup(): boolean
  + getId(): long
  + getType(): String
  + getStatus(): String
  + getStartTime(): OffsetDateTime
  + getEndTime(): OffsetDateTime
  + getParticipantsCount(): int
  + getMaxParticipants(): int
  + getCreatedBy(): long
  + getSlotId(): Long
  + getAdminNote(): String
  + isCanceledByAdmin(): boolean
}

class Schedule {
  - id: long
  - workDate: LocalDate
  - createdAt: OffsetDateTime
  --
  + getId(): long
  + getWorkDate(): LocalDate
  + getCreatedAt(): OffsetDateTime
}

class TimeSlot {
  - id: long
  - scheduleId: long
  - startTime: OffsetDateTime
  - endTime: OffsetDateTime
  - available: boolean
  --
  + getId(): long
  + getScheduleId(): long
  + getStartTime(): OffsetDateTime
  + getEndTime(): OffsetDateTime
  + isAvailable(): boolean
  + setAvailable(a: boolean): void
}

' ══════════════════════════════
'  PERSISTENCE LAYER
' ══════════════════════════════

class connectDB {
  - {static} URL: String
  - {static} USER: String
  - {static} PASS: String
  --
  - connectDB()
  + {static} getConnection(): Connection
}

class AppointmentDAO {
  - connection: Connection
  --
  + markPastAppointmentsDone(): void
  + addAppointment(appointment: Appointment): void
  + getAppointmentById(id: long): Appointment
  + getAllAppointments(): List<Appointment>
  + getActiveAppointmentsByDate(date: LocalDate): List<Appointment>
  + getFutureAppointmentsByDate(date: LocalDate): List<Appointment>
  + getAppointmentsByUser(userId: long): List<Appointment>
  + updateStatus(id: long, newStatus: String): int
  + cancelByAdmin(id: long, note: String): int
  + updateStatusAndNote(id: long, newStatus: String, note: String): int
  + updateParticipants(id: long, newCount: int): int
  + updateParticipantsAndNote(id: long, newCount: int, note: String): int
  + updateTypeAndNote(id: long, newType: String, note: String): int
  + updateType(id: long, newType: String): int
  + updateSlotAndTime(id: long, newSlotId: long, newStart: OffsetDateTime, newEnd: OffsetDateTime): int
  + deleteAppointment(id: long): void
}

class ScheduleDAO {
  - connection: Connection
  --
  + addSchedule(schedule: Schedule): long
  + existsByDate(date: LocalDate): boolean
  + getScheduleById(id: long): Schedule
  + getScheduleByDate(date: LocalDate): Schedule
  + getAllSchedules(): List<Schedule>
  + getFutureSchedules(): List<Schedule>
  + deleteSchedule(id: long): void
}

class TimeSlotDAO {
  - connection: Connection
  --
  + addTimeSlot(slot: TimeSlot): long
  + existsByScheduleAndStart(scheduleId: long, start: OffsetDateTime): boolean
  + getTimeSlotById(id: long): TimeSlot
  + getAllTimeSlots(): List<TimeSlot>
  + getAllSlotsBySchedule(scheduleId: long): List<TimeSlot>
  + getAllSlotsByDate(date: LocalDate): List<TimeSlot>
  + getAvailableSlots(): List<TimeSlot>
  + getAvailableSlotsByScheduleId(scheduleId: long): List<TimeSlot>
  + updateAvailability(id: long, available: boolean): int
  + getBookedByUsername(slotId: long): String
  + deleteTimeSlot(id: long): void
}

class UserDAO {
  - connection: Connection
  --
  + addUser(user: User, rawPassword: String): void
  + login(username: String, plainPassword: String): Optional<User>
  + getUserById(id: String): Optional<User>
  + getAllUsers(): List<User>
}

' ══════════════════════════════
'  SERVICE LAYER
' ══════════════════════════════

class ReminderService {
  - {static} SMTP_HOST: String
  - {static} SMTP_PORT: int
  - senderEmail: String
  - senderPassword: String
  - appointmentDAO: AppointmentDAO
  - userDAO: UserDAO
  - notifier: Notifier
  --
  + ReminderService(appointmentDAO: AppointmentDAO, userDAO: UserDAO)
  + ReminderService(appointmentDAO: AppointmentDAO, userDAO: UserDAO, notifier: Notifier)
  + sendReminders(): void
  + sendEmail(user: User, appointment: Appointment): void
  + friendlyType(t: String): String
  - buildBody(user: User, appointment: Appointment): String
}

' ══════════════════════════════
'  OBSERVER PATTERN
'  (service_notify package)
' ══════════════════════════════

interface Observer {
  + notify(user: User, message: String): void
}

class Notifier {
  - observers: List<Observer>
  --
  + addObserver(observer: Observer): void
  + notifyAll(user: User, message: String): void
}

class EmailObserver {
  --
  + notify(user: User, message: String): void
}

' ══════════════════════════════
'  STRATEGY PATTERN
'  (service_rules package)
' ══════════════════════════════

interface BookingRuleStrategy {
  + isValid(appointment: Appointment): boolean
  + errorMessage(): String
}

class BookingRuleEngine {
  - rules: List<BookingRuleStrategy>
  --
  + BookingRuleEngine(rules: List<BookingRuleStrategy>)
  + validate(appointment: Appointment): void
}

class CapacityRule {
  --
  + isValid(appointment: Appointment): boolean
  + errorMessage(): String
}

class DurationRule {
  - {static} MAX_MINUTES: long
  --
  + isValid(appointment: Appointment): boolean
  + errorMessage(): String
}

' ══════════════════════════════
'  RELATIONSHIPS
' ══════════════════════════════

' ── Inheritance ────────────────
User <|-- Admin

' ── Builder (nested, creates Admin) ────
AdminBuilder ..> Admin       : <<creates>>
Admin        +-- AdminBuilder

' ── Enum association ───────────
User --> Role

' ── Admin composition (owns DAOs) ──────
Admin *--> AppointmentDAO
Admin *--> TimeSlotDAO
Admin *--> ScheduleDAO

' ── ReminderService composition ────────
ReminderService *--> AppointmentDAO
ReminderService *--> UserDAO
ReminderService *--> Notifier

' ── Observer pattern ───────────────────
Observer         <|..  EmailObserver
Notifier         o-->  Observer        : observes (0..*)
Notifier         ..>   Observer        : <<notifies>>

' ── Strategy pattern ───────────────────
BookingRuleStrategy <|..  CapacityRule
BookingRuleStrategy <|..  DurationRule
BookingRuleEngine   o-->  BookingRuleStrategy : rules (0..*)

' ── DAO → domain (dependency/manages) ──
AppointmentDAO ..> Appointment  : <<manages>>
ScheduleDAO    ..> Schedule     : <<manages>>
TimeSlotDAO    ..> TimeSlot     : <<manages>>
UserDAO        ..> User         : <<manages>>

' ── DAOs use connectDB ─────────────────
AppointmentDAO ..> connectDB    : <<uses>>
ScheduleDAO    ..> connectDB    : <<uses>>
TimeSlotDAO    ..> connectDB    : <<uses>>
UserDAO        ..> connectDB    : <<uses>>

' ── Domain associations ────────────────
Appointment "many" --o "1"    User     : createdBy >
Appointment "many" --o "0..1" TimeSlot : linked to >
TimeSlot    "many" --o "1"    Schedule : belongs to >

' ── Strategy uses domain ───────────────
BookingRuleStrategy ..> Appointment : <<validates>>
BookingRuleEngine   ..> Appointment : <<validates>>

@enduml
